--- a/sources/notebooks_sources/guía_instalación/guia_de_instalacion.html
+++ b/sources/notebooks_sources/guía_instalación/guia_de_instalacion.html
@@ -60,7 +60,7 @@ var addUtterances = () => {
     script.src = "https://utteranc.es/client.js";
     script.async = "async";
 
-    script.setAttribute("repo", "gonmolina/DSFyC_book");
+    script.setAttribute("repo", "gonmolina/CCyVE_book");
     script.setAttribute("issue-term", "pathname");
     script.setAttribute("theme", "github-light");
     script.setAttribute("label", "💬 comment");
@@ -86,7 +86,7 @@ commentsRunWhenDOMLoaded(addUtterances);
         const thebe_selector_output = ".output"
     </script>
     <script async="async" src="../../../_static/sphinx-thebe.js"></script>
-    <link rel="canonical" href="https://gonmolina.github.io/DSFyC_book/sources/notebooks_sources/guía_instalación/guia_de_instalacion.html" />
+    <link rel="canonical" href="https://gonmolina.github.io/CCyVE_book/sources/notebooks_sources/guía_instalación/guia_de_instalacion.html" />
     <link rel="index" title="Índice" href="../../../genindex.html" />
     <link rel="search" title="Búsqueda" href="../../../search.html" />
     <link rel="next" title="Introducción a los cuadernos de Jupyter" href="../intro_python/Introducci%C3%B3n%20a%20los%20notebooks%20de%20Jupyter.html" />
@@ -453,14 +453,14 @@ commentsRunWhenDOMLoaded(addUtterances);
         aria-label="Connect with source repository"><i class="fab fa-github"></i></button>
     <div class="dropdown-buttons sourcebuttons">
         <a class="repository-button"
-            href="https://github.com/gonmolina/DSFyC_book"><button type="button" class="btn btn-secondary topbarbtn"
+            href="https://github.com/gonmolina/CCyVE_book"><button type="button" class="btn btn-secondary topbarbtn"
                 data-toggle="tooltip" data-placement="left" title="Repositorio de origen"><i
                     class="fab fa-github"></i>repositorio</button></a>
         <a class="issues-button"
-            href="https://github.com/gonmolina/DSFyC_book/issues/new?title=Issue%20on%20page%20%2Fsources/notebooks_sources/guía_instalación/guia_de_instalacion.html&body=Your%20issue%20content%20here."><button
+            href="https://github.com/gonmolina/CCyVE_book/issues/new?title=Issue%20on%20page%20%2Fsources/notebooks_sources/guía_instalación/guia_de_instalacion.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Abrir un problema"><i class="fas fa-lightbulb"></i>Tema abierto</button></a>
-        <a class="edit-button" href="https://github.com/gonmolina/DSFyC_book/edit/master/sources/notebooks_sources/guía_instalación/guia_de_instalacion.md"><button
+        <a class="edit-button" href="https://github.com/gonmolina/CCyVE_book/edit/master/sources/notebooks_sources/guía_instalación/guia_de_instalacion.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edita esta página"><i class="fas fa-pencil-alt"></i>sugerir editar</button></a>
     </div>
