--- a/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html
+++ b/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html
@@ -60,7 +60,7 @@ var addUtterances = () => {
     script.src = "https://utteranc.es/client.js";
     script.async = "async";
 
-    script.setAttribute("repo", "gonmolina/DSFyC_book");
+    script.setAttribute("repo", "gonmolina/CCyVE_book");
     script.setAttribute("issue-term", "pathname");
     script.setAttribute("theme", "github-light");
     script.setAttribute("label", "💬 comment");
@@ -88,7 +88,7 @@ commentsRunWhenDOMLoaded(addUtterances);
     <script async="async" src="../../../../_static/sphinx-thebe.js"></script>
     <script async="async" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/latest.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">MathJax.Hub.Config({"tex2jax": {"inlineMath": [["\\(", "\\)"]], "displayMath": [["\\[", "\\]"]], "processRefs": false, "processEnvironments": false}})</script>
-    <link rel="canonical" href="https://gonmolina.github.io/DSFyC_book/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html" />
+    <link rel="canonical" href="https://gonmolina.github.io/CCyVE_book/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html" />
     <link rel="index" title="Índice" href="../../../../genindex.html" />
     <link rel="search" title="Búsqueda" href="../../../../search.html" />
     <link rel="next" title="Compensadores de adelanto y de retraso de fase" href="../../modulo5/compensadores.html" />
@@ -458,14 +458,14 @@ commentsRunWhenDOMLoaded(addUtterances);
         aria-label="Connect with source repository"><i class="fab fa-github"></i></button>
     <div class="dropdown-buttons sourcebuttons">
         <a class="repository-button"
-            href="https://github.com/gonmolina/DSFyC_book"><button type="button" class="btn btn-secondary topbarbtn"
+            href="https://github.com/gonmolina/CCyVE_book"><button type="button" class="btn btn-secondary topbarbtn"
                 data-toggle="tooltip" data-placement="left" title="Repositorio de origen"><i
                     class="fab fa-github"></i>repositorio</button></a>
         <a class="issues-button"
-            href="https://github.com/gonmolina/DSFyC_book/issues/new?title=Issue%20on%20page%20%2Fsources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html&body=Your%20issue%20content%20here."><button
+            href="https://github.com/gonmolina/CCyVE_book/issues/new?title=Issue%20on%20page%20%2Fsources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.html&body=Your%20issue%20content%20here."><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Abrir un problema"><i class="fas fa-lightbulb"></i>Tema abierto</button></a>
-        <a class="edit-button" href="https://github.com/gonmolina/DSFyC_book/edit/master/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.md"><button
+        <a class="edit-button" href="https://github.com/gonmolina/CCyVE_book/edit/master/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.md"><button
                 type="button" class="btn btn-secondary topbarbtn" data-toggle="tooltip" data-placement="left"
                 title="Edita esta página"><i class="fas fa-pencil-alt"></i>sugerir editar</button></a>
     </div>
@@ -485,7 +485,7 @@ commentsRunWhenDOMLoaded(addUtterances);
         aria-label="Launch interactive content"><i class="fas fa-rocket"></i></button>
     <div class="dropdown-buttons">
         
-        <a class="binder-button" href="https://mybinder.org/v2/gh/gonmolina/DSFyC_book/master?urlpath=tree/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.md"><button type="button"
+        <a class="binder-button" href="https://mybinder.org/v2/gh/gonmolina/CCyVE_book/master?urlpath=tree/sources/notebooks_sources/modulo_frec/estabilidad_nyquist/estabilidad_en_frecuencia.md"><button type="button"
                 class="btn btn-secondary topbarbtn" title="Lanzamiento Binder" data-toggle="tooltip"
                 data-placement="left"><img class="binder-button-logo"
                     src="../../../../_static/images/logo_binder.svg"
