deploy: 5ae8190033c14ef8ad2b4d7c1826e31d48aa92b2

--- a/sources/notebooks_sources/modulo_ve/referencia.html
+++ b/sources/notebooks_sources/modulo_ve/referencia.html
@@ -625,8 +625,9 @@ z =  \mathbf{C_1x}\\
 <p>mediante la ley de control:</p>
 <div class="math notranslate nohighlight">
 \[ u =-\mathbf{Kx}\]</div>
-<p>Se puede demostrar que la ubicación de los polos a lazo cerrado que minimizan el funcional de costo anterior, son los polos estables del lugar simétrico de las raíces dado por la ecuación:
-$<span class="math notranslate nohighlight">\(1+\rho G_0(-s)G_0(s)=0\)</span>$</p>
+<p>Se puede demostrar que la ubicación de los polos a lazo cerrado que minimizan el funcional de costo anterior, son los polos estables del lugar simétrico de las raíces dado por la ecuación:</p>
+<div class="math notranslate nohighlight">
+\[1+\rho G_0(-s)G_0(s)=0\]</div>
 <p>donde <span class="math notranslate nohighlight">\(G_0(s)\)</span> es:</p>
 <div class="math notranslate nohighlight">
 \[G_0(s) = \frac{Z(s)}{U(s)}=\mathbf{C_1}(s\mathbf I -\mathbf A)^{-1}\mathbf B\]</div>
