--- a/sources/notebooks_sources/modulo1/ejemplos_sistemas/CineticaPuntual.html
+++ b/sources/notebooks_sources/modulo1/ejemplos_sistemas/CineticaPuntual.html
@@ -608,8 +608,7 @@ The MathtextBackendBitmap class was deprecated in Matplotlib 3.4 and will be rem
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_latex math notranslate nohighlight">
-\[\displaystyle - c \lambda + \frac{\beta n}{\Lambda}\]</div>
+<img alt="../../../../_images/CineticaPuntual_6_0.png" src="../../../../_images/CineticaPuntual_6_0.png" />
 </div>
 </div>
 <p>Ahora le decimos a sympy que lo represente en forma matricial:</p>
