--- a/sources/notebooks_sources/modulo1/laplace/transformada_laplace_python_opcional.html
+++ b/sources/notebooks_sources/modulo1/laplace/transformada_laplace_python_opcional.html
@@ -786,8 +786,7 @@ The MathtextBackendBitmap class was deprecated in Matplotlib 3.4 and will be rem
 </div>
 </div>
 <div class="cell_output docutils container">
-<div class="output text_latex math notranslate nohighlight">
-\[\displaystyle \left[ 1, \  t, \  e^{- a t}, \  t e^{- a t}, \  t^{2} e^{- a t}, \  \sin{\left(\omega t \right)}, \  \cos{\left(\omega t \right)}, \  1 - e^{- a t}, \  e^{- a t} \sin{\left(\omega t \right)}, \  e^{- a t} \cos{\left(\omega t \right)}, \  t^{n} e^{- a t}\right]\]</div>
+<img alt="../../../../_images/transformada_laplace_python_opcional_31_0.png" src="../../../../_images/transformada_laplace_python_opcional_31_0.png" />
 </div>
 </div>
 <div class="cell docutils container">
