deploy: 499b02d6a548050ecaae2549f0ab891ecf78df4b

--- a/sources/notebooks_sources/modulo_ve/polos_ceros_EE.html
+++ b/sources/notebooks_sources/modulo_ve/polos_ceros_EE.html
@@ -774,8 +774,9 @@ z_i\mathbf{I}-\mathbf{A}&amp;-\mathbf{B}\end{bmatrix}\begin{bmatrix}\mathbf{x}_0
 \[\begin{split}
 \begin{bmatrix}\mathbf{C}&amp;D\end{bmatrix}\begin{bmatrix}\mathbf{x}_0\\u_0\end{bmatrix}=0.
 \end{split}\]</div>
-<p>Combinando las dos anteriores:
-$<span class="math notranslate nohighlight">\(
+<p>Combinando las dos anteriores:</p>
+<div class="math notranslate nohighlight">
+\[\begin{split}
 \begin{bmatrix}
   z_i\mathbf{I}-\mathbf{A}&amp;-\mathbf{B}\\
   \mathbf{C}&amp;D
@@ -788,7 +789,7 @@ $<span class="math notranslate nohighlight">\(
   \mathbf{0}\\
   0
 \end{bmatrix}
-\)</span>$</p>
+\end{split}\]</div>
 <p>Vemos que este sistema tiene solución más allá de la trivial, unicamente si el determinante de la matriz de la izquierda anterior es 0. Es decir:</p>
 <div class="math notranslate nohighlight">
 \[\begin{split}\det{\begin{bmatrix}
